Creacion de los post

--- a/_posts/2025-11-11-Coches.markdown
+++ b/_posts/2025-11-11-Coches.markdown
@@ -21,6 +21,8 @@ Los pilotos invitados destacaron:
 
 El sonido del motor bóxer a más de 9.000 rpm se convirtió en uno de los momentos más disfrutados por el público.
 
+![Ferrari F40](/assets/img/porsche-911-gt3-rs.png)
+
 ---
 
 ## Lamborghini Aventador Performante: brutalidad y drama italiano
@@ -34,6 +36,8 @@ Las demostraciones del Performante sorprendieron por:
 - El espectáculo visual de su diseño, que acaparó cámaras y móviles.
 
 Aunque no fue el más rápido en tiempos, sí fue el que más impacto visual generó.
+
+![Lamborghini Aventador](/assets/img/Lamborghini-aventador.png)
 
 ---
 
